Fix overflow issue with project-section. Add correct links and thumbnail images to projects.

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
 body {
-    width: 100vw;
-    overflow-x: hidden;
+    max-width: 100vw;
 }
 
 .welcome-bg {
@@ -22,6 +21,7 @@ body {
     background-color: rgba(210, 140, 140, 0.5);
     position: absolute;
     top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
 }
@@ -49,23 +49,26 @@ body {
     min-height: 70vh;
 }
 
-.project-grid {
+.project-grid, .skill-grid {
     min-height: 60vh;
     background-color: #edc951;
     padding: 60px 0;
+    max-width: 100vw;
 }
-
-.project-grid h2 {
+.skill-grid {
+    background-color: #eee;
+}
+.project-grid h2, .skill-tile h2 {
     font-size: 3em;
 }
 
-.project-tile {
+.project-tile, .skill-tile {
     max-height: 300px;
     max-width: 400px;
     overflow: hidden;
     margin: 1rem 0;
 }
-.project-tile img {
+.project-tile img, .skill-tile img {
     max-height: 100%;
 }
 
@@ -77,7 +80,7 @@ footer {
 
 .social {
     display: inline-block;
-    border: 3px solid ;
+    border: 3px solid;
     width: 75px;
     height: 75px;
     border-radius: 15px;
@@ -85,16 +88,12 @@ footer {
     line-height: 70px;
 }
 
-.social:hover {
+.social:hover, .social > a:hover {
+    text-decoration: none;
     color: #333;
 }
 
 .social > a {
     display: block;
     color: #ffffff;
-}
-
-.social > a:hover {
-    text-decoration: none;
-    color: #333;
 }
